upgraded lake es

--- a/templates/event-lake-es/package.json
+++ b/templates/event-lake-es/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "event-lake-es",
+  "name": "subsys1-event-lake-es",
   "private": true,
   "scripts": {
-    "test": "sls package -r us-east-1 -s test --acct dev",
-    "dp:lcl": "sls deploy -v -r us-east-1 --acct dev",
-    "rm:lcl": "sls remove -r us-east-1 --acct dev",
-    "dp:stg:e": "sls deploy -v -r us-east-1 -s stg --acct dev --force",
-    "dp:stg:w": "sls deploy -v -r us-west-2 -s stg --acct dev --force",
-    "dp:prd:e": "sls deploy -v -r us-east-1 -s prd --acct prod --force",
-    "dp:prd:w": "sls deploy -v -r us-west-2 -s prd --acct prod --force",
+    "test": "sls package -r us-west-2 -s stg",
+    "test:ci": "eval \"$(assume-role) npm test\"",
+    "dp:stg:e": "sls deploy --verbose -r us-east-1 -s stg --force",
+    "dp:stg:w": "sls deploy --verbose -r us-west-2 -s stg --force",
+    "dp:prd:e": "sls deploy --verbose -r us-east-1 -s prd --force",
+    "dp:prd:w": "sls deploy --verbose -r us-west-2 -s prd --force",
     "dp:stg:e:ci": "eval \"$(assume-role) npm run dp:stg:e\"",
     "dp:stg:w:ci": "eval \"$(assume-role) npm run dp:stg:w\"",
     "dp:prd:e:ci": "eval \"$(assume-role) npm run dp:prd:e\"",
     "dp:prd:w:ci": "eval \"$(assume-role) npm run dp:prd:w\""
   },
   "devDependencies": {
-    "aws-assume-role-cicd": "^1.0.4",
-    "elasticsearch": "^16.7.2",
-    "http-aws-es": "^6.0.0",
-    "serverless": "^2.0.0"
+    "aws-assume-role-cicd": "^1.0.0",
+    "serverless": "^3.0.0"
+  },
+  "dependencies": {
+    "elasticsearch": "^14.2.1",
+    "http-aws-es": "^4.0.0"
   }
 }
