upgraded event metrics

--- a/templates/event-metrics/package.json
+++ b/templates/event-metrics/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "my-event-metrics",
+  "name": "subsys1-event-metrics",
   "private": true,
   "scripts": {
-    "clean": "rm -rf .nyc_output/ .webpack/ .serverless/ coverage/",
+    "clean": "rimraf -rf .nyc_output/ .webpack/ .serverless/ coverage/",
     "lint": "npm run lint:js",
     "lint:js": "eslint --fix --format=node_modules/eslint-formatter-pretty .",
     "lint:staged": "lint-staged",
     "pretest": "npm run clean && npm run lint",
     "test": "better-npm-run test",
-    "test:int": "eval \"$(assume-role) better-npm-run test:int\"",
-    "start": "sls offline --port 3001 --apiKey test-int-api-key-123456 -r us-east-1 -s stg --acct dev",
-    "dp:lcl": "sls deploy -v -r us-east-1 --acct dev",
-    "rm:lcl": "sls remove -r us-east-1 --acct dev",
-    "dp:stg:e": "sls deploy -v -r us-east-1 -s stg --acct dev --force",
-    "dp:stg:w": "sls deploy -v -r us-west-2 -s stg --acct dev --force",
-    "dp:prd:e": "sls deploy -v -r us-east-1 -s prd --acct prod --force",
-    "dp:prd:w": "sls deploy -v -r us-west-2 -s prd --acct prod --force",
-    "dp:stg:e:ci": "eval \"$(assume-role) npm run dp:stg:e\"",
+    "test:int": "better-npm-run test:int",
+    "test:int:ci": "eval \"$(assume-role) npm run test:int\"",
+    "test:sls": "sls package --verbose -r us-west-2 -s stg",
+    "start": "sls offline --port 3001 --apiKey test-int-api-key-123456 -r us-west-2 -s stg",
+    "dp:stg:w": "sls deploy --verbose -r us-west-2 -s stg --force",
+    "dp:stg:e": "sls deploy --verbose -r us-east-1 -s stg --force",
+    "dp:prd:w": "sls deploy --verbose -r us-west-2 -s prd --force",
+    "dp:prd:e": "sls deploy --verbose -r us-east-1 -s prd --force",
     "dp:stg:w:ci": "eval \"$(assume-role) npm run dp:stg:w\"",
-    "dp:prd:e:ci": "eval \"$(assume-role) npm run dp:prd:e\"",
-    "dp:prd:w:ci": "eval \"$(assume-role) npm run dp:prd:w\""
+    "dp:stg:e:ci": "eval \"$(assume-role) npm run dp:stg:e\"",
+    "dp:prd:w:ci": "eval \"$(assume-role) npm run dp:prd:w\"",
+    "dp:prd:e:ci": "eval \"$(assume-role) npm run dp:prd:e\""
   },
   "betterScripts": {
     "test": {
@@ -34,58 +34,69 @@
       "command": "npm start -- --exec \"mocha --timeout 20000 --require @babel/register --recursive ./test/helper.js \"./test/int/**/*.test.js\"\"",
       "env": {
         "NODE_ENV": "test",
-        "AWS_REGION": "us-east-1",
-        "DEBUG": "handler"
+        "AWS_REGION": "us-west-2",
+        "KMS_REGIONS": "us-east-1,us-west-2",
+        "DEBUG": "tbd*"
       }
     }
   },
   "lint-staged": {
     "*.js": "eslint"
   },
-  "pre-commit": "lint:staged",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "devDependencies": {
-    "@babel/cli": "^7.10.0",
-    "@babel/core": "^7.10.0",
-    "@babel/plugin-transform-runtime": "^7.10.0",
-    "@babel/preset-env": "^7.10.0",
-    "@babel/register": "^7.10.0",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.17.10",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/plugin-transform-runtime": "^7.17.10",
+    "@babel/preset-env": "^7.17.7",
+    "@babel/register": "^7.17.7",
     "aws-assume-role-cicd": "^1.0.4",
-    "aws-sdk": "^2.814.0",
-    "aws-sdk-mock": "^4.2.0",
-    "babel-eslint": "^10.0.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-istanbul": "^5.2.0",
+    "aws-sdk": "^2.1133.0",
+    "aws-sdk-mock": "^5.7.0",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-istanbul": "^6.1.1",
     "baton-vcr-replay-for-aws-sdk": "^1.0.1",
     "baton-vcr-serverless-plugin": "^1.0.0",
-    "better-npm-run": "0.1.0",
-    "chai": "^4.0.0",
-    "eslint": "^8.25.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-formatter-pretty": "^1.3.0",
-    "eslint-plugin-import": "^2.9.0",
-    "lint-staged": "^7.0.0",
-    "mocha": "^10.2.0",
-    "nyc": "^11.8.0",
-    "pre-commit": "^1.2.2",
-    "serverless": "^3.22.0",
-    "serverless-offline": "^4.5.0",
-    "serverless-webpack": "^5.0.0",
-    "sinon": "^7.2.4",
-    "sinon-chai": "^3.1.0",
-    "supertest": "^3.1.0",
-    "webpack": "^4.1.1",
-    "webpack-node-externals": "^1.6.0"
+    "better-npm-run": "^0.1.1",
+    "chai": "^4.3.6",
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-formatter-pretty": "^4.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^12.4.1",
+    "mocha": "^10.0.0",
+    "nock": "^13.2.4",
+    "nyc": "^15.1.0",
+    "serverless": "^3.0.0",
+    "serverless-kinesis-esm-plugin": "^1.0.1",
+    "serverless-multi-regional-plugin": "^1.0.5",
+    "serverless-offline": "^5.0.0",
+    "serverless-webpack": "^5.7.1",
+    "sinon": "^14.0.0",
+    "sinon-chai": "^3.5.0",
+    "supertest": "^6.2.3",
+    "webpack": "^4.46.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.10.0",
-    "aws-kms-ee": "^0.6.0",
-    "aws-lambda-stream": "^0.6.0",
-    "bluebird": "^3.4.7",
-    "debug": "^3.1.0",
-    "highland": "^2.13.0",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "regenerator-runtime": "^0.12.1",
-    "uuid": "^3.2.1"
+    "@babel/runtime": "^7.17.9",
+    "aws-kms-ee": "^0.12.0",
+    "aws-lambda-stream": "^0.22.0",
+    "bluebird": "^3.7.2",
+    "debug": "^4.1.0",
+    "highland": "^2.13.5  ",
+    "isomorphic-fetch": "^3.0.0",
+    "lambda-api": "^0.11.2",
+    "lodash": "^4.17.15",
+    "memory-cache": "^0.2.0",
+    "moment": "^2.24.0",
+    "node-fetch": "^2.6.1",
+    "uuid": "^3.3.3"
   }
 }
