--- a/templates/event-metrics/.babelrc
+++ b/templates/event-metrics/.babelrc
@@ -1,10 +1,10 @@
 {
   "presets": [
     [
-      "@babel/env",
+      "@babel/preset-env",
       {
         "targets": {
-          "node": "12"
+          "node": "16"
         }
       }
     ]
@@ -16,6 +16,17 @@
     "test": {
       "plugins": [
         "istanbul"
+      ],
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "node": "16"
+            },
+            "modules": "umd"
+          }
+        ]
       ]
     }
   }
