--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@babel/register": "^7.10.0",
     "@babel/runtime": "^7.10.0",
     "@smithy/node-http-handler": "^2.1.8",
+    "@smithy/service-error-classification": "^2.1.5",
     "@smithy/util-retry": "^2.1.1",
     "@smithy/util-stream": "^2.1.1",
     "aws-kms-ee": "^1.0.0",
@@ -104,6 +105,7 @@
   "peerDependencies": {
     "@babel/runtime": "7.x",
     "@smithy/node-http-handler": "2.x",
+    "@smithy/service-error-classification": "2.x",
     "@smithy/util-retry": "2.x",
     "@smithy/util-stream": "2.x",
     "aws-kms-ee": "1.x",
