--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "lodash": "^4.17.15",
     "memory-cache": "^0.2.0",
     "mocha": "^10.2.0",
+    "nock": "^13.5.4",
     "node-fetch": "^2.7.0",
     "nyc": "^14.1.1",
     "sinon": "^17.0.1",
