--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-lambda-stream",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "Create stream processors with AWS Lambda functions.",
   "keywords": [
     "aws",
@@ -71,6 +71,7 @@
     "@aws-sdk/client-sts": "^3.450.0",
     "@aws-sdk/client-timestream-write": "^3.450.0",
     "@aws-sdk/lib-dynamodb": "^3.450.0",
+    "@aws-sdk/s3-request-presigner": "3.490.0",
     "@aws-sdk/signature-v4-crt": "^3.450.0",
     "@aws-sdk/util-dynamodb": "^3.450.0",
     "@babel/cli": "^7.10.0",
