--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,4 +19,16 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
+      - uses: sergeysova/jq-action@v2
+        name: Derive Version
+        id: version
+        with:
+          cmd: 'jq .version package.json -r'
+      - uses: elgohr/Github-Release-Action@v5
+        name: Create Tag
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          title: Release ${{ steps.version.outputs.value }}
+          tag: ${{ steps.version.outputs.value }}
 
