--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,9 +5,9 @@ on:
   # push:
   #   branches: [ master ]
 
-permissions:
-  id-token: write  # Required for OIDC
-  contents: read
+# permissions:
+#   id-token: write  # Required for OIDC
+#   contents: read
 
 jobs:
   publish:
